feat: queue local voice recordings
